# ros2web_interfaces

./: CMakeLists.txt  README.md
msg/: ContentType.msg  StatusMsg.msg  StatusType.msg  WSMsgData.msg  WSMsgType.msg
srv/: HTTP.srv  ServerInfo.srv
